# r4m_public_demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
docs/: Getting_started.md  data_info.md
requirements/: requirements-dev.txt  requirements.txt
src/: Dockerfile  plot_from_df.py  public_dashboard.py  public_static_dashboard.py  streamlit_auth.py
src/.streamlit/: .gitignore  config.toml  secrets.toml
src/config/: template_credentials.json
src/data/: acts_by_date.feather  acts_by_date_trend.csv  acts_by_date_trend.feather  csv_to_feather.py  obfuscated_data.csv  obfuscated_data.feather  r4mProd.activities.csv  save_data_to_filetypes.py
src/r4m_gallery/r4m_data/: run4moreProd.activities.csv
src/teaching_material/section_1/lecture_01/: lecture_1a_operations_print_help.py  lecture_1b_syntax_style_pemdas.py
src/teaching_material/section_1/lecture_02/: bonus_print_syntaxes.py  lecture_2a_data_types_operations.py  lecture_2b_functions_intro.py  lecture_c_preview.py  (+1 more)
src/utils/: all_plots_from_df.py  connect_to_localhost_db_script.py  connect_to_remote_db_script.py  connection_utils.py  copy_remote_db_to_local.py  create_dbs_utils.py  create_plots.py  dashboard_plot_configs.py  demo_site_colors.py  demo_streamlit_colors.py  init_test_db_script.py  mongo_pipelines.py  plot_constants_configs.py  time_file_to_df.py
tests/: connection_utils_test.py  create_dbs_utils_test.py  save_data_to_filetypes_test.py  ssh_connection_test.py  test_connection_utils.py  time_file_to_df_test.py
(+24 files in other folders)
