[tool.poetry]
name = "r4m-public"
version = "0.1.0"
description = ""
authors = ["ΘΑΝΑΣΗΣ ΑΡΓΥΡΙΟΥ <argythana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pymongo = "^4.7.2"
sshtunnel = "^0.4.0"
pytest = "^8.2.0"
ipython = "^8.24.0"
black = "^24.4.2"
ruff = "^0.4.5"
pyright = "^1.1.364"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
