[tool.poetry]
name = "r4m-public"
version = "0.1.0"
description = ""
authors = ["Thanasis Argyriou <argythana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pymongo = "^4.7.2"
sshtunnel = "^0.4.0"
ipython = "^8.24.0"
streamlit = "^1.35.0"
polars = "^0.20.31"
plotly = "^5.22.0"
matplotlib = "^3.9.0"
pandas-stubs = "^2.2.2.240603"

[tool.poetry.dev-dependencies]
ruff = "^0.4.5"
pytest = "^8.2.0"
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
mypy = "^1.10.0"
pyright = "^1.1.364"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
disable_error_code = "import-untyped"
ignore_missing_imports = true

[tool.pyright]
reportMissingImports = false
venvPath = ".venv"
